RESOLVED FIXED58071
WebKit2: Web Inspector's style sidebar fails to display when inspecting element
https://bugs.webkit.org/show_bug.cgi?id=58071
Summary WebKit2: Web Inspector's style sidebar fails to display when inspecting element
Theresa O'Connor
Reported 2011-04-07 13:06:02 PDT
Launch the Web Inspector via the "Inspect Element" context menu item. The element is correctly selected in the DOM tree displayed on the Elements tab, but the style sidebar is missing. Clicking on one of the other Web Inspector tabs (Resources, say), then return to the Elements tab, fixes the problem.
Attachments
[PATCH] Fix (2.73 KB, patch)
2011-04-25 16:07 PDT, Brian Weinstein
timothy: review+
[PATCH] Fix v2 (1.92 KB, text/plain)
2011-04-25 16:35 PDT, Brian Weinstein
no flags
Theresa O'Connor
Comment 1 2011-04-07 13:06:29 PDT
Alexander Pavlov (apavlov)
Comment 2 2011-04-08 02:02:35 PDT
Thanks for the report, Edward, I'm having hard time reproducing the issue and thus need some clarification. - Was it a fresh installation of Safari (== there are no settings/preferences stored) where the issue occurred? - Was the console opened when the Web Inspector contents were constructed? - Did you by chance have the local store disabled in the browser? - Can you consistently reproduce the issue (you see no sidebar, fix the sidebar width to be non-zero, close and re-open the Web Inspector, and the issue is there again)? - Which platform(s) did you see the issue on?
Theresa O'Connor
Comment 3 2011-04-15 09:58:43 PDT
Ahh, sorry, this looks like a WK2 regression.
Brian Weinstein
Comment 4 2011-04-25 16:07:36 PDT
Created attachment 90978 [details] [PATCH] Fix
WebKit Review Bot
Comment 5 2011-04-25 16:08:44 PDT
Attachment 90978 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/UIProcess/win/WebInspectorProxyWin.cpp:190: Missing space after , [whitespace/comma] [3] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brian Weinstein
Comment 6 2011-04-25 16:13:07 PDT
Landed in r84824.
Brian Weinstein
Comment 7 2011-04-25 16:35:05 PDT
Created attachment 91008 [details] [PATCH] Fix v2
Note You need to log in before you can comment on or make changes to this bug.